--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-parallax": "^2.1.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "react-scroll-parallax": "^1.3.5",
+    "react-scrollchor": "^6.0.0",
+    "react-waypoint": "^8.1.0",
+    "terser": "^3.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
